--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.3",
+        "@babel/preset-react": "^7.18.6",
+        "@popperjs/core": "^2.10.2",
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-react": "^2.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
+        "bootstrap": "^5.2.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "sass": "^1.32.11",
         "tailwindcss": "^3.1.0"
     }
 }
