--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
         "react-dom": "^17.0.2",
         "sass": "^1.32.11",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "react-router": "^6.4.2",
+        "react-router-dom": "^6.4.2"
     }
 }
