--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
+        "babel-preset-react": "^6.24.1",
         "react-router": "^6.4.2",
-        "react-router-dom": "^6.4.2"
+        "react-router-dom": "^6.4.2",
+        "react-select": "^5.5.1"
     }
 }
